<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Cast</string>
    <string name="detail">Cast Detail</string>
    <string name="profile">Cast Profile</string>
    <string name="cousant">Cousant profile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_cast">Cast</string>
    <string name="action_events">Events</string>
    <string name="action_settings">Settings</string>
    <string name="complete_sign_up">Complete SignUp</string>
    <string name="mobile">Mobile details</string>
    <string name="email">Email</string>
    <string name="summary">Summary</string>
    <string name="dob">Date of Birth: <xliff:g id="value">%1$s</xliff:g></string>
    <string name="action_edit">Edit</string>
    <string name="action_profile">Profile</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_log_out">Logout</string>
    <string name="action_log_in">Login</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_new_event">Add event</string>
    <string name="not_sign_up">Not registered? SignUp</string>
    <string name="user_have_acc">Already have an account? Login</string>


    <!-- Preference -->
    <string name="pref_personality_title">Personality</string>
    <string name="pref_personality_key" translatable="false">pref_personality</string>

    <string name="pref_list_title">Show date of birth</string>
    <string name="pref_list_key" translatable="false">pref_list</string>
    <string name="list_summary">@string/every_one</string>
    <!--list value-->
    <string name="every_one">Every one</string>
    <string name="just_this_device">Just this device</string>
    <string name="current_user">current user</string>
    <string name="never">never</string>
    <!--list entity and entry-->
    <string-array name="pref_entity_entry">
        <item>@string/every_one</item>
        <item>@string/just_this_device</item>
        <item>@string/current_user</item>
        <item>@string/never</item>
    </string-array>

    <string name="pref_cast_list_title">Cast users update</string>
    <string name="pref_cast_list_key" translatable="false">pref_cast_list</string>
    <string name="cast_list_summary">@string/as_they_are_created</string>
    <!--cast list value-->
    <string name="as_they_are_created">As they are created</string>
    <string name="once_a_day">Once a day</string>
    <!--cast list entity and entry-->
    <string-array name="pref_cast_entity_entry">
        <item>@string/as_they_are_created</item>
        <item>@string/once_a_day</item>
    </string-array>

    <string name="pref_reset_title">Reset</string>
    <string name="pref_reset_key" translatable="false">pre_reset</string>
    <string name="reset_summary">Clear all settings made</string>

</resources>
