<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_personality_title"
        android:key="@string/pref_personality_key">

        <ListPreference
            android:title="@string/pref_list_title"
            android:key="@string/pref_list_key"
            android:defaultValue="@string/every_one"
            android:summary="@string/every_one"
            android:entries="@array/pref_entity_entry"
            android:entryValues="@array/pref_entity_entry" />

        <ListPreference
            android:title="@string/pref_cast_list_title"
            android:key="@string/pref_cast_list_key"
            android:defaultValue="@string/as_they_are_created"
            android:summary="@string/as_they_are_created"
            android:entries="@array/pref_cast_entity_entry"
            android:entryValues="@array/pref_cast_entity_entry"/>
    </PreferenceCategory>

    <Preference
        android:title="@string/pref_reset_title"
        android:key="@string/pref_reset_key"
        android:summary="@string/reset_summary"
        android:selectable="true"
        android:enabled="true"/>

</PreferenceScreen>