<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cast"
        android:enabled="true"
        android:icon="@drawable/ic_action_cast"
        android:title="@string/action_cast"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_details_white_24dp"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
</menu>